# demining_challange

./: .gitignore  README.md  pyproject.toml
scripts/: prepare_test.py  split_data_and_convert_into_coco8.py  train.py
src/: utils.py
